# Praxis

./: .env.example  pyproject.toml
praxis/: __init__.py  contracts.py  executor.py  generator.py  llm_client.py  main.py  refiner.py  sandbox.py  skill.py  storage.py
praxis/db/: schema.sql
praxis/llm/: __init__.py  anthropic_client.py  ollama_client.py  openai_client.py
tests/: test_executor.py  test_llm_client.py  test_skill.py  test_storage.py
